--- a/Day-15.ipynb
+++ b/Day-15.ipynb
@@ -24,6 +24,7 @@
     }
    ],
    "source": [
+    "# iteration loop\n",
     "for num in range(1,11):\n",
     "    if num > 1 :\n",
     "        for i in range(2,num):\n",
